// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`nestLists: assumes level is 1 if not set 1`] = `
[
  {
    "_key": "A0-parent",
    "_type": "@list",
    "children": [
      {
        "_key": "A0",
        "_type": "block",
        "children": [
          {
            "_type": "span",
            "text": "Bullet 1",
          },
        ],
        "listItem": "bullet",
      },
    ],
    "level": 1,
    "listItem": "bullet",
    "mode": "html",
  },
  {
    "_key": "B0-parent",
    "_type": "@list",
    "children": [
      {
        "_key": "B0",
        "_type": "block",
        "children": [
          {
            "_type": "span",
            "text": "Bullet 2",
          },
        ],
        "listItem": "number",
      },
    ],
    "level": 1,
    "listItem": "number",
    "mode": "html",
  },
]
`;

exports[`nestLists: ends lists when non-list item occurs 1`] = `
[
  {
    "_key": "A0-parent",
    "_type": "@list",
    "children": [
      {
        "_key": "A0",
        "_type": "block",
        "children": [
          {
            "_type": "span",
            "text": "Bullet 1",
          },
        ],
        "level": 1,
        "listItem": "bullet",
      },
      {
        "_key": "B1",
        "_type": "block",
        "children": [
          {
            "_type": "span",
            "text": "Bullet 2",
          },
        ],
        "level": 1,
        "listItem": "bullet",
      },
    ],
    "level": 1,
    "listItem": "bullet",
    "mode": "html",
  },
  {
    "_type": "map",
  },
  {
    "_key": "C0-parent",
    "_type": "@list",
    "children": [
      {
        "_key": "C0",
        "_type": "block",
        "children": [
          {
            "_type": "span",
            "text": "Number 1",
          },
        ],
        "level": 1,
        "listItem": "number",
      },
      {
        "_key": "D1",
        "_type": "block",
        "children": [
          {
            "_type": "span",
            "text": "Number 2",
          },
        ],
        "level": 1,
        "listItem": "number",
      },
    ],
    "level": 1,
    "listItem": "number",
    "mode": "html",
  },
]
`;

exports[`nestLists: handles deeper/shallower transitions correctly in direct mode 1`] = `
[
  {
    "_key": "A0-parent",
    "_type": "@list",
    "children": [
      {
        "_key": "A0",
        "_type": "block",
        "children": [
          {
            "_type": "span",
            "text": "Level 1, A",
          },
        ],
        "level": 1,
        "listItem": "bullet",
      },
      {
        "_key": "B1",
        "_type": "block",
        "children": [
          {
            "_type": "span",
            "text": "Level 1, B",
          },
        ],
        "level": 1,
        "listItem": "bullet",
      },
      {
        "_key": "C0-parent",
        "_type": "@list",
        "children": [
          {
            "_key": "C0",
            "_type": "block",
            "children": [
              {
                "_type": "span",
                "text": "Level 2, C",
              },
            ],
            "level": 2,
            "listItem": "bullet",
          },
          {
            "_key": "D1",
            "_type": "block",
            "children": [
              {
                "_type": "span",
                "text": "Level 2, D",
              },
            ],
            "level": 2,
            "listItem": "bullet",
          },
          {
            "_key": "E0-parent",
            "_type": "@list",
            "children": [
              {
                "_key": "E0",
                "_type": "block",
                "children": [
                  {
                    "_type": "span",
                    "text": "Level 3, E",
                  },
                ],
                "level": 3,
                "listItem": "bullet",
              },
              {
                "_key": "F1",
                "_type": "block",
                "children": [
                  {
                    "_type": "span",
                    "text": "Level 3, F",
                  },
                ],
                "level": 3,
                "listItem": "bullet",
              },
            ],
            "level": 3,
            "listItem": "bullet",
            "mode": "direct",
          },
          {
            "_key": "G0",
            "_type": "block",
            "children": [
              {
                "_type": "span",
                "text": "Level 2, G",
              },
            ],
            "level": 2,
            "listItem": "bullet",
          },
          {
            "_key": "H1",
            "_type": "block",
            "children": [
              {
                "_type": "span",
                "text": "Level 2, H",
              },
            ],
            "level": 2,
            "listItem": "bullet",
          },
          {
            "_key": "I0-parent",
            "_type": "@list",
            "children": [
              {
                "_key": "I0",
                "_type": "block",
                "children": [
                  {
                    "_type": "span",
                    "text": "Level 3, I",
                  },
                ],
                "level": 3,
                "listItem": "bullet",
              },
              {
                "_key": "J1",
                "_type": "block",
                "children": [
                  {
                    "_type": "span",
                    "text": "Level 3, J",
                  },
                ],
                "level": 3,
                "listItem": "bullet",
              },
            ],
            "level": 3,
            "listItem": "bullet",
            "mode": "direct",
          },
        ],
        "level": 2,
        "listItem": "bullet",
        "mode": "direct",
      },
    ],
    "level": 1,
    "listItem": "bullet",
    "mode": "direct",
  },
  {
    "_key": "K0-parent",
    "_type": "@list",
    "children": [
      {
        "_key": "K0",
        "_type": "block",
        "children": [
          {
            "_type": "span",
            "text": "Level 1, K",
          },
        ],
        "level": 1,
        "listItem": "number",
      },
      {
        "_key": "L1",
        "_type": "block",
        "children": [
          {
            "_type": "span",
            "text": "Level 1, L",
          },
        ],
        "level": 1,
        "listItem": "number",
      },
    ],
    "level": 1,
    "listItem": "number",
    "mode": "direct",
  },
]
`;

exports[`nestLists: handles deeper/shallower transitions correctly in html mode 1`] = `
[
  {
    "_key": "A0-parent",
    "_type": "@list",
    "children": [
      {
        "_key": "A0",
        "_type": "block",
        "children": [
          {
            "_type": "span",
            "text": "Level 1, A",
          },
        ],
        "level": 1,
        "listItem": "bullet",
      },
      {
        "_key": "B1",
        "_type": "block",
        "children": [
          {
            "_type": "span",
            "text": "Level 1, B",
          },
          {
            "_key": "C0-parent",
            "_type": "@list",
            "children": [
              {
                "_key": "C0",
                "_type": "block",
                "children": [
                  {
                    "_type": "span",
                    "text": "Level 2, C",
                  },
                ],
                "level": 2,
                "listItem": "bullet",
              },
              {
                "_key": "D1",
                "_type": "block",
                "children": [
                  {
                    "_type": "span",
                    "text": "Level 2, D",
                  },
                  {
                    "_key": "E0-parent",
                    "_type": "@list",
                    "children": [
                      {
                        "_key": "E0",
                        "_type": "block",
                        "children": [
                          {
                            "_type": "span",
                            "text": "Level 3, E",
                          },
                        ],
                        "level": 3,
                        "listItem": "bullet",
                      },
                      {
                        "_key": "F1",
                        "_type": "block",
                        "children": [
                          {
                            "_type": "span",
                            "text": "Level 3, F",
                          },
                        ],
                        "level": 3,
                        "listItem": "bullet",
                      },
                    ],
                    "level": 3,
                    "listItem": "bullet",
                    "mode": "html",
                  },
                ],
                "level": 2,
                "listItem": "bullet",
              },
              {
                "_key": "G0",
                "_type": "block",
                "children": [
                  {
                    "_type": "span",
                    "text": "Level 2, G",
                  },
                ],
                "level": 2,
                "listItem": "bullet",
              },
              {
                "_key": "H1",
                "_type": "block",
                "children": [
                  {
                    "_type": "span",
                    "text": "Level 2, H",
                  },
                  {
                    "_key": "I0-parent",
                    "_type": "@list",
                    "children": [
                      {
                        "_key": "I0",
                        "_type": "block",
                        "children": [
                          {
                            "_type": "span",
                            "text": "Level 3, I",
                          },
                        ],
                        "level": 3,
                        "listItem": "bullet",
                      },
                      {
                        "_key": "J1",
                        "_type": "block",
                        "children": [
                          {
                            "_type": "span",
                            "text": "Level 3, J",
                          },
                        ],
                        "level": 3,
                        "listItem": "bullet",
                      },
                    ],
                    "level": 3,
                    "listItem": "bullet",
                    "mode": "html",
                  },
                ],
                "level": 2,
                "listItem": "bullet",
              },
            ],
            "level": 2,
            "listItem": "bullet",
            "mode": "html",
          },
        ],
        "level": 1,
        "listItem": "bullet",
      },
    ],
    "level": 1,
    "listItem": "bullet",
    "mode": "html",
  },
  {
    "_key": "K0-parent",
    "_type": "@list",
    "children": [
      {
        "_key": "K0",
        "_type": "block",
        "children": [
          {
            "_type": "span",
            "text": "Level 1, K",
          },
        ],
        "level": 1,
        "listItem": "number",
      },
      {
        "_key": "L1",
        "_type": "block",
        "children": [
          {
            "_type": "span",
            "text": "Level 1, L",
          },
        ],
        "level": 1,
        "listItem": "number",
      },
    ],
    "level": 1,
    "listItem": "number",
    "mode": "html",
  },
]
`;

exports[`nestLists: nests deeper lists inside of parent list in direct mode 1`] = `
[
  {
    "_key": "A0-parent",
    "_type": "@list",
    "children": [
      {
        "_key": "A0",
        "_type": "block",
        "children": [
          {
            "_type": "span",
            "text": "Bullet 1",
          },
        ],
        "level": 1,
        "listItem": "bullet",
      },
      {
        "_key": "B1",
        "_type": "block",
        "children": [
          {
            "_type": "span",
            "text": "Bullet 2",
          },
        ],
        "level": 1,
        "listItem": "bullet",
      },
      {
        "_key": "C0-parent",
        "_type": "@list",
        "children": [
          {
            "_key": "C0",
            "_type": "block",
            "children": [
              {
                "_type": "span",
                "text": "Number 1",
              },
            ],
            "level": 2,
            "listItem": "number",
          },
          {
            "_key": "D1",
            "_type": "block",
            "children": [
              {
                "_type": "span",
                "text": "Number 2",
              },
            ],
            "level": 2,
            "listItem": "number",
          },
        ],
        "level": 2,
        "listItem": "number",
        "mode": "direct",
      },
    ],
    "level": 1,
    "listItem": "bullet",
    "mode": "direct",
  },
]
`;

exports[`nestLists: wraps adjacent list items of different types in separate list nodes 1`] = `
[
  {
    "_key": "A0-parent",
    "_type": "@list",
    "children": [
      {
        "_key": "A0",
        "_type": "block",
        "children": [
          {
            "_type": "span",
            "text": "Bullet 1",
          },
        ],
        "level": 1,
        "listItem": "bullet",
      },
      {
        "_key": "B1",
        "_type": "block",
        "children": [
          {
            "_type": "span",
            "text": "Bullet 2",
          },
        ],
        "level": 1,
        "listItem": "bullet",
      },
    ],
    "level": 1,
    "listItem": "bullet",
    "mode": "html",
  },
  {
    "_key": "C0-parent",
    "_type": "@list",
    "children": [
      {
        "_key": "C0",
        "_type": "block",
        "children": [
          {
            "_type": "span",
            "text": "Number 1",
          },
        ],
        "level": 1,
        "listItem": "number",
      },
      {
        "_key": "D1",
        "_type": "block",
        "children": [
          {
            "_type": "span",
            "text": "Number 2",
          },
        ],
        "level": 1,
        "listItem": "number",
      },
    ],
    "level": 1,
    "listItem": "number",
    "mode": "html",
  },
]
`;

exports[`nestLists: wraps adjacent list items of different types in separate list nodes 2`] = `
[
  {
    "_key": "A0-parent",
    "_type": "@list",
    "children": [
      {
        "_key": "A0",
        "_type": "block",
        "children": [
          {
            "_type": "span",
            "text": "Bullet 1",
          },
        ],
        "level": 1,
        "listItem": "bullet",
      },
      {
        "_key": "B1",
        "_type": "block",
        "children": [
          {
            "_type": "span",
            "text": "Bullet 2",
          },
        ],
        "level": 1,
        "listItem": "bullet",
      },
    ],
    "level": 1,
    "listItem": "bullet",
    "mode": "html",
  },
  {
    "_key": "C0-parent",
    "_type": "@list",
    "children": [
      {
        "_key": "C0",
        "_type": "block",
        "children": [
          {
            "_type": "span",
            "text": "Number 1",
          },
        ],
        "level": 1,
        "listItem": "number",
      },
      {
        "_key": "D1",
        "_type": "block",
        "children": [
          {
            "_type": "span",
            "text": "Number 2",
          },
        ],
        "level": 1,
        "listItem": "number",
      },
    ],
    "level": 1,
    "listItem": "number",
    "mode": "html",
  },
]
`;

exports[`nestLists: wraps adjacent list items of same type/level in toolkit list node 1`] = `
[
  {
    "_key": "A0-parent",
    "_type": "@list",
    "children": [
      {
        "_key": "A0",
        "_type": "block",
        "children": [
          {
            "_type": "span",
            "text": "First",
          },
        ],
        "level": 1,
        "listItem": "bullet",
      },
      {
        "_key": "B1",
        "_type": "block",
        "children": [
          {
            "_type": "span",
            "text": "Second",
          },
        ],
        "level": 1,
        "listItem": "bullet",
      },
      {
        "_key": "C2",
        "_type": "block",
        "children": [
          {
            "_type": "span",
            "text": "Third",
          },
        ],
        "level": 1,
        "listItem": "bullet",
      },
    ],
    "level": 1,
    "listItem": "bullet",
    "mode": "html",
  },
]
`;

exports[`nestLists: wraps deeper lists inside of last list item in html mode 1`] = `
[
  {
    "_key": "A0-parent",
    "_type": "@list",
    "children": [
      {
        "_key": "A0",
        "_type": "block",
        "children": [
          {
            "_type": "span",
            "text": "Bullet 1",
          },
        ],
        "level": 1,
        "listItem": "bullet",
      },
      {
        "_key": "B1",
        "_type": "block",
        "children": [
          {
            "_type": "span",
            "text": "Bullet 2",
          },
          {
            "_key": "C0-parent",
            "_type": "@list",
            "children": [
              {
                "_key": "C0",
                "_type": "block",
                "children": [
                  {
                    "_type": "span",
                    "text": "Number 1",
                  },
                ],
                "level": 2,
                "listItem": "number",
              },
              {
                "_key": "D1",
                "_type": "block",
                "children": [
                  {
                    "_type": "span",
                    "text": "Number 2",
                  },
                ],
                "level": 2,
                "listItem": "number",
              },
            ],
            "level": 2,
            "listItem": "number",
            "mode": "html",
          },
        ],
        "level": 1,
        "listItem": "bullet",
      },
    ],
    "level": 1,
    "listItem": "bullet",
    "mode": "html",
  },
]
`;
